--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-lottie": "^1.2.3",
+    "react-reveal": "^1.2.2",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
